apps/glances/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glances-master
  namespace: monitoring
  labels:
    app: glances-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glances-master
  template:
    metadata:
      labels:
        app: glances-master
    spec:
      hostPID: true
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: glances
          image: nicolargo/glances:4.5.6-full
          ports:
            - name: web
              containerPort: 61208
              protocol: TCP
          securityContext:
            privileged: true
          volumeMounts:
            - name: var-run-docker
              mountPath: /var/run/docker.sock
              readOnly: true
            - name: host-root
              mountPath: /host
              readOnly: true
      volumes:
        - name: var-run-docker
          hostPath:
            path: /var/run/docker.sock
        - name: host-root
          hostPath:
            path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glances-worker
  namespace: monitoring
  labels:
    app: glances-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glances-worker
  template:
    metadata:
      labels:
        app: glances-worker
    spec:
      hostPID: true
      nodeSelector:
        kubernetes.io/hostname: homelab-worker1
      containers:
        - name: glances
          image: nicolargo/glances:4.5.6-full
          ports:
            - name: web
              containerPort: 61208
              protocol: TCP
          securityContext:
            privileged: true
          volumeMounts:
            - name: var-run-docker
              mountPath: /var/run/docker.sock
              readOnly: true
            - name: host-root
              mountPath: /host
              readOnly: true
      volumes:
        - name: var-run-docker
          hostPath:
            path: /var/run/docker.sock
        - name: host-root
          hostPath:
            path: /
