apps/glances/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glances-ingress
  namespace: kube-system
spec:
  ingressClassName: traefik 
  rules:
    # 🏠 Route for the Master Node
    - host: glancesmaster.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glances-master-svc
                port:
                  number: 61208

    # 🏗️ Route for the Worker Node
    - host: glancesworkerone.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glances-worker-svc
                port:
                  number: 61208
