apps/glances/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: glances-master-svc
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 61208
      targetPort: 61208
  selector:
    app: glances-master
---
apiVersion: v1
kind: Service
metadata:
  name: glances-worker-svc
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 61208
      targetPort: 61208
  selector:
    app: glances-worker
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glances-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: glancesmaster.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glances-master-svc
                port:
                  number: 61208
    - host: glancesworkerone.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glances-worker-svc
                port:
                  number: 61208
